tests/model/interleaved/out_of_order2.expected
File "tests/model/interleaved/out_of_order2.smt2", line 3, character 0-16:
3 | (assert (= b 0))
    ^^^^^^^^^^^^^^^^
Error The following constant is not defined, and thus has no value: `b`
Hint: The interleave mode for checking model requires constants in the model
  file to be defined in the same order as they are declared in the input
  problem file, you might want to try using the `--check-model-mode=full`
  option.
